Add responsiveness. Suitable for smartphone and tablet too.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
   <h1>The Simon Game</h1>
-  <h2>Memorize the sequence and repeat the same moves! </br> <strong>Press any key to start</strong></h2>
-
-  <div class="board">
+  <h2>Memorize the sequence and repeat the same moves! </br> <strong>Press the Start button to play the game!</strong></h2>
+  <div class="start-board">
+    <button class="btn start-btn" id="start">START</button>
+  </div>
+  <div class="board hide">
     <div class="row">
       <div class="board-button red" id="red"></div>
       <div class="board-button green" id="green"></div>
