Small design adjustements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>The Simon Game</h1>
-  <h2>Memorize the sequence and repeat the same moves! </br> <strong>Press the Start button to play the game!</strong></h2>
+  <h2>Memorize and repeat the sequence! </br> <strong>Press the Start button to play the game!</strong></h2>
   <div class="start-board">
     <button class="btn start-btn" id="start">START</button>
   </div>
