Add display score. Minor design ajustements

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <h1>The Simon Game</h1>
-  <h2>Memorize and repeat the sequence! </br> <strong>Press the Start button to play the game!</strong></h2>
+  <h2>Memorize and repeat the sequence!</h2>
   <div class="start-board">
+      <strong class="info-text">Press the Start button to play the game!</strong><br />
+
     <button class="btn start-btn" id="start">START</button>
   </div>
   <div class="board hide">
